// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`source with gauges should return gauges 1`] = `
[
  {
    "code": "gal1",
    "flowUnit": null,
    "levelUnit": "m",
    "location": {
      "coordinates": [
        22,
        11,
        33,
      ],
      "kind": "gauge",
    },
    "name": "Galicia GAUGE 1",
    "requestParams": null,
    "source": {
      "name": "Galicia",
    },
    "url": "http://ww.guide/gal1",
  },
  {
    "code": "gal3",
    "flowUnit": null,
    "levelUnit": "m",
    "location": {
      "coordinates": [
        44,
        33,
        55,
      ],
      "kind": "gauge",
    },
    "name": "Galicia gauge 3",
    "requestParams": null,
    "source": {
      "name": "Galicia",
    },
    "url": "http://ww.guide/gal3",
  },
]
`;

exports[`source without gauges should return gauges 1`] = `
[
  {
    "code": "em1",
    "flowUnit": null,
    "levelUnit": "m",
    "location": {
      "coordinates": [
        22,
        11,
        33,
      ],
      "kind": "gauge",
    },
    "name": "Empty gauge 1",
    "requestParams": null,
    "source": {
      "name": "Empty",
    },
    "url": "http://ww.guide/empty1",
  },
  {
    "code": "em2",
    "flowUnit": "m3/s",
    "levelUnit": "m",
    "location": {
      "coordinates": [
        55,
        44,
        66,
      ],
      "kind": "gauge",
    },
    "name": "Empty gauge 2",
    "requestParams": null,
    "source": {
      "name": "Empty",
    },
    "url": "http://ww.guide/empty2",
  },
]
`;
